# scientific-calculator

./: .gitignore  CLAUDE.md  NOTES.md  README.md  TODO.md  docker-compose.yml  scientific-calculator.sln
.github/workflows/: addition-service-rust.yml  aws-deploy.yml  bitwise-service-swift.yml  complex-service-clojure.yml  conversion-service-typescript.yml  division-service-ruby.yml  factorial-service-elixir.yml  log-service-php.yml  matrix-service-julia.yml  memory-service-csharp.yml  multiplication-service-python.yml  power-service-java.yml  square-root-service-fsharp.yml  subtraction-service-go.yml  trig-service-kotlin.yml
.lsp/.cache/: db.transit.json
api-gateway/: README.md  package.json  routes.js  run.sh  server.js
api-gateway/test/: routes.test.js  server.test.js
frontend/: Dockerfile  docker-entrypoint.sh  nginx.conf  nginx.conf.aws.template  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
services/addition-service-rust/: Cargo.toml  Dockerfile  README.md  run.sh
services/addition-service-rust/src/: lib.rs  main.rs
services/addition-service-rust/tests/: test_addition.rs
services/bitwise-service-swift/: Dockerfile  Package.resolved  Package.swift  run.sh
services/complex-service-clojure/: Dockerfile  build.clj  deps.edn  run.sh
services/conversion-service-typescript/: Dockerfile  jest.config.js  package.json  run.sh
telemetry/: blackbox.yml  otel-config.yaml  prometheus.yml  promtail-config.yaml
terraform/: .gitignore  README.md  main.tf  microservices.tf  outputs.tf  services.tf  variables.tf
(+125 files in other folders)
