[package]
name = "addition-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4.20"

[lib]
name = "addition_service"
path = "src/lib.rs"

[dev-dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"